<resources>
    <string name="app_name">BlackAndRed</string>
    <string name="start_game">Start Game</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="quit">Quit</string>
    <string name="options">Options</string>
    <string name="back_to_menu">Back To Menu</string>
    <string name="end_game">End Game</string>
    <string name="bet_25">Bet 25</string>
    <string name="bet_50">Bet 50</string>
    <string name="bet_100">Bet 100</string>
    <string name="your_points">Your points :</string>
    <string name="try_again">Try again!</string>
    <string name="quit_last">Quit</string>
    <string name="you_can_try_again">You can try again!</string>
    <string name="you_lose">You lose!</string>
</resources>